--- a/index.html
+++ b/index.html
@@ -7,14 +7,133 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Font+Name&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Anta&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Anta&family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <title>Tribute Page</title>
 </head>
 
 <body>
-    
+    <main>
+        <h1 class="heading"><strong>Satya Nadella</strong> : A Visionary Leader in Technology</h1>
+        <div class="img"><img src="profile.png" alt="image" class="image"></div>
+        <div class="paragraphs mt-4">
+            <h3>Who is Satya Nadella :</h3>
+            <p>Satya Narayana Nadella, born on August 19, 1967, in Hyderabad, India, is a renowned Indian-American
+                business
+                executive. As the current CEO of Microsoft, he has played a pivotal role in transforming the company
+                into a
+                global leader in technology.
+            </p>
+        </div>
 
-    
+        <div class="paragraphs">
+            <h3>Early Life and Education:</h3>
+            <p>Nadella's journey began with a passion for technology. He holds a bachelor's degree in Electrical
+                Engineering
+                from Manipal Institute of Technology and later earned a master's degree in Computer Science from the
+                University of Wisconsin Milwaukee.
+            </p>
+        </div>
+
+        <div class="paragraphs">
+            <div>
+                <h3>
+                    paragraphs
+                    Achievements:
+                </h3>
+                <p>
+                    Joining Microsoft in 1992, Nadella quickly rose through the ranks, contributing significantly to the
+                    development of Microsoft's cloud services. His leadership skills became evident as he spearheaded
+                    innovations such as Azure, making Microsoft a major player in the cloud computing space.
+                </p>
+            </div>
+            <div class="img"><img src="microsoft.jpg" alt="" class="image"></div>
+        </div>
+
+        <div class="paragraphs">
+            <h3>
+                Impact on Web Development:
+            </h3>
+            <p>
+                Satya Nadella has been a driving force behind the evolution of Microsoft's technologies, including the
+                development of the Edge browser and Visual Studio Code. His emphasis on open-source initiatives has
+                greatly
+                influenced the web development community.
+            </p>
+        </div>
+
+        <div class="paragraphs">
+            <h3>
+                Leadership Roles:
+            </h3>
+            <p>
+                Appointed as Microsoft's CEO in 2014, Nadella brought a fresh perspective, focusing on cloud-first and
+                mobile-first strategies. Under his leadership, Microsoft's market value has soared, reflecting his
+                strategic
+                vision and adaptability.
+            </p>
+        </div>
+
+        <div class="paragraphs">
+            <h3>
+                Philanthropy and Social Impact:
+            </h3>
+            <p>
+                Nadella is committed to social causes, promoting accessibility and inclusion in the tech industry. His
+                initiatives aim to bridge the digital divide and empower people with disabilities through technology.
+            </p>
+        </div>
+
+        <div class="paragraphs">
+            <div>
+                <h3>
+                    Recognition and Awards:
+                </h3>
+                <p>
+                    Satya Nadella's contributions have been widely recognized, earning him accolades such as Time 100
+                    most
+                    influential people and being named Financial Times' Person of the Year in 2019.
+                </p>
+            </div>
+            <div class="img"><img src="award.png" alt="" class="image"></div>
+        </div>
+
+        <div class="paragraphs">
+            <div>
+                <h3>
+                    Quotes:
+                </h3>
+                <p>
+                    "Known for his insightful and inspirational quotes, Nadella often emphasizes the importance of
+                    empathy,
+                    continuous learning, and the role of technology in empowering individuals and organizations."
+                </p>
+            </div>
+            <div class="img"><img src="quotes.jpg" alt="" class="image"></div>
+        </div>
+
+        <div class="paragraphs">
+            <h3>
+                Legacy:
+            </h3>
+            <p>
+                Satya Nadella's legacy extends beyond Microsoft's success. He has left an indelible mark on the tech
+                industry, inspiring a new era of innovation, collaboration, and a human-centric approach to technology.
+            </p>
+        </div>
+
+        <div class="interactive-elements">
+            <h3>Learn More : </h3>
+            <a href="https://en.wikipedia.org/wiki/Satya_Nadella">wikipedia</a>
+            <a href="https://news.microsoft.com/exec/satya-nadella/">Microsoft</a>
+            <a href="https://www.linkedin.com/in/satyanadella">linkedin</a>
+        </div>
+    </main>
+
+
     <script src="app.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
